--- a/package.json
+++ b/package.json
@@ -65,8 +65,6 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "vfile": "^6.0.3",
-    "vfile-message": "^4.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -74,6 +72,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
