--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.11.17",
     "fumadocs-core": "14.4.2",
     "fumadocs-mdx": "11.1.1",
     "fumadocs-ui": "14.4.2",
     "input-otp": "^1.4.1",
+    "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-mdx-remote": "^5.0.0",
@@ -64,6 +66,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
